产品列表页增加市场价还有freeshopping图标，产品详细也产品名称样式修改，去除面包屑导航下的下划线 修改帮助文档的显示样式，不影响会员中心的AreaR样式

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -384,6 +384,12 @@ h6 span {
 	overflow: hidden
 }
 
+/*针对帮助中心底部的样式*/
+.AreaRHelp {
+	float: right;
+	overflow: hidden
+}
+
 .AreaL h3 {
 	font-weight: bold;
 	height: 23px;
@@ -871,7 +877,7 @@ a#logo:hover span {
 	height: 30px;
 	line-height: 30px;
 	padding: 0px;
-	border-bottom: 1px solid #ddd;
+	/*border-bottom: 1px solid #ddd; 屏蔽面包屑导航的下划线*/
 }
 
 .header_banner {
